bdr.BDR2.scala.error
Erreur de compilation :
BDR2:5: error: not found: value ecriture
  ecriture match {
  ^BDR2:71: error: reassignment to val
    fini = true
         ^